--- a/index.html
+++ b/index.html
@@ -17,61 +17,31 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+       <!-- pre-define format-->
+    <script type="text/javascript" src="js/helper.js"></script>
   </head>
   <body>
 
-
-    <div class="col-md-4 full-height">
-      <div class="row-md-4"> row md 4 a</div>
-      <div class="row-md-8"> row md 8 a</div>
+<!--xs on small screen. Add xs make column not going to stack up in small screen -->
+<div class="container-fluid full-height">
+<div class="row full-height">
+    <div class="left-panel col-md-2 col-xs-6 full-height">
+      <div id = "left-panel1" class="row-md-4"> row md 4 a</div>
+      <div id = "left-panel2" class="row-md-8"> row md 8 a</div>
     </div>
-    <div class= "col-md-8 full-height reading-area cell">
-       <p>Middle column</p>
-        <p>Mai Ho uploaded version 3<br>
-Thu, Oct 29 4:55 PM<br>
-WorkChat - Vision Document - 1.0.docx<br>
-WorkChat - Vision Document - 1.0.docx<br>
-Mai Ho<br>
-Thu, Oct 29 4:55 PM<br>
-Updated<br>
-Bao Nguyen<br>
-Thu, Oct 29 4:56 PM<br>
-tks Mai<br>
-Bao Nguyen uploaded version 4<br>
-Thu, Oct 29 7:48 PM<br>
-WorkChat - Vision Document - 1.0.docx<br>
-Bao Nguyen uploaded a file<br>
-Thu, Oct 29 10:40 PM<br>
-PA1-Group04.zip<br>
-Bao Nguyen<br>
-Thu, Oct 29 10:46 PM<br>
-hey guys, i need someone who can write documents and presentation next week. Because next week I must fly to Jakarta. Who can help me? <br>
-Thib<br>
-Thu, Oct 29 10:56 PM<br>
-Me I can help if you want <br>
-Bao Nguyen<br>
-Thu, Oct 29 11:01 PM<br>
-ok Thib ,thank you.<br>
-Bao Nguyen<br>
-Thu, Oct 29 11:02 PM<br>
-You can view this week documents in file PA1-Group04.zip, next week i'll give you more details. <br>
-Thib<br>
-Thu, Oct 29 11:03 PM<br>
-ok <br>
-Bao Nguyen<br>
-Thu, Oct 29 11:04 PM<br>
-Did nqmtri give you Node.js documents?<br>
-</p>
-
-
-    col-md-8 a</div>
-
+    <div id="chat-log" class= "middle-panel col-md-10 col-xs-6 full-height reading-area cell">col-md-8 a</div>
+</div>
+</div>
 
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- just placeholder -->
+    <script type="text/javascript" src="js/placeholder.js"></script>
+
   </body>
 </html>
