--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <![endif]-->
        <!-- pre-define format-->
     <script type="text/javascript" src="js/helper.js"></script>
+
+    <!-- font -->
+    <!--
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300|Open+Sans:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+-->
   </head>
   <body>
 
@@ -26,10 +31,14 @@
 <div class="container-fluid full-height">
 <div class="row full-height">
     <div class="left-panel col-md-2 col-xs-6 full-height">
-      <div id = "left-panel1" class="row-md-4"> row md 4 a</div>
-      <div id = "left-panel2" class="row-md-8"> row md 8 a</div>
+      <div id = "left-panel-content"> </div>
     </div>
-    <div id="chat-log" class= "middle-panel col-md-10 col-xs-6 full-height reading-area cell">col-md-8 a</div>
+
+    <div id = "middle-panel" class="col-md-10 col-xs-6 full-height">
+       <div id="chat-log" class= "chat-log-panel reading-area"></div>
+    </div>
+   
+   
 </div>
 </div>
 
