--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <script type="text/javascript" src="js/helper.js"></script>
 
     <!-- font -->
-    <!--
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300|Open+Sans:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
--->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+    
   </head>
   <body>
 
@@ -35,7 +34,8 @@
     </div>
 
     <div id = "middle-panel" class="col-md-10 col-xs-6 full-height">
-       <div id="chat-log" class= "chat-log-panel reading-area"></div>
+       <div id="chat-log" class= "row-10 chat-log-panel reading-area"></div>
+       <textarea placeholder="Say something" id="chat-text-area" class="row-2 text-area"cols="5"></textarea> 
     </div>
    
    
