--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <a href="demo1 (8 Nov 2015)/index.html">Demo 1 (8 Nov 2015)</a><br>
-<a href="demo2 (11 Nov 2015)/index.html">Demo 1 (8 Nov 2015)</a>
+<a href="demo2 (11 Nov 2015)/index.html">Demo 2 (11 Nov 2015)</a><br>
+<a href="demo3 (12 Nov 2015)/index.html">Demo 3 (12 Nov 2015)</a><br>
