--- a/old version/index.html
+++ b/old version/index.html
@@ -20,9 +20,13 @@
        <!-- pre-define format-->
     <script type="text/javascript" src="js/helper.js"></script>
 
-    <!-- font -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans|Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
-    
+    <!-- font  
+    for chat: Open Sans
+    for left panel :  Roboto
+     -->
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans|Roboto:700,900&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+
+
   </head>
   <body>
 
