--- a/Mainscreen_Workchat/index.html
+++ b/Mainscreen_Workchat/index.html
@@ -101,7 +101,8 @@
                         <a href="#open-sidebar row-1">
                             <span  id="open-sidebar" class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
                         </a>
-                    <!---->
+                    <!-- chat page-->
+                    <div class="current-page-content">
                         <div class="row-8">
                             <div id="chatroom" class="reading-area full-height">
                                 <!-- insert chatlog here-->
@@ -110,11 +111,12 @@
                         <div class="row-2 full-height">
                             <!-- insert textbox and send button here-->
                             <div class="row">
-                            <textarea id="text-box" class="col-lg-10 col-md-10 col-xs-10" cols="5" rows="5"></textarea>
+                            <textarea id="text-box" class="col-lg-10 col-md-10 col-xs-10" cols="5" rows="5" onkeypress="enterKeyListener();"></textarea>
                             <input id="submitMessage" type="submit" class="btn btn-info col-lg-2 col-md-2 col-xs-2" value="Submit Button">
                             </div>
                         </div>
-                    <!-- -->        
+                    </div>
+                    <!-- end chat page -->        
                     </div>
                 </div>
             </div>
