--- a/Mainscreen_Workchat/index.html
+++ b/Mainscreen_Workchat/index.html
@@ -97,22 +97,22 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-8 col-md-8 col-xs-8">
+                    <div class="col-lg-9 col-md-9 col-xs-9">
                         <a href="#open-sidebar row-1">
                             <span  id="open-sidebar" class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
                         </a>
                     <!-- chat page-->
                     <div class="current-page-content">
-                        <div class="row-8">
+                        <div class="row-9">
                             <div id="chatroom" class="reading-area full-height">
                                 <!-- insert chatlog here-->
                             </div>
                         </div>
-                        <div class="row-2 full-height">
+                        <div class="row-1 full-height">
                             <!-- insert textbox and send button here-->
                             <div class="row">
-                            <textarea id="text-box" class="col-lg-10 col-md-10 col-xs-10" cols="5" rows="5" onkeypress="enterKeyListener();"></textarea>
-                            <input id="submitMessage" type="submit" class="btn btn-info col-lg-2 col-md-2 col-xs-2" value="Submit Button">
+                            <textarea id="text-box" class="chat-widget-group row-1 col-lg-10 col-md-10 col-xs-10" cols="5" rows="3" onkeypress="enterKeyListener();"></textarea>
+                            <input id="submitMessage" type="submit" class="chat-widget-group row-1 btn btn-info col-lg-2 col-md-2 col-xs-2" value="Send">
                             </div>
                         </div>
                     </div>
@@ -132,14 +132,22 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+
+      <!-- Messeger class script-->
+    <script src = "js/Messeger.js"></script>
+    <!-- LeftPanerUI class-->
+    <script src = "js/LeftPanerUI.js"></script>
+    <!-- ChatLogUI class-->
+    <script src = "js/ChatLogUI.js"></script>
+
+
     <!-- cs300-function script -->
     <script src = "js/cs300-function.js"></script>
 
     <!-- cs300 script-->
     <script src = "js/cs300.js"></script>
-    <!-- Messeger script-->
-    <script src = "js/Messeger.js"></script>
     
+   
     <!-- test script -->
     <script src = "js/Test/testChatBubble.js"></script>
     
