OOP Utility class

--- a/Mainscreen_Workchat/index.html
+++ b/Mainscreen_Workchat/index.html
@@ -139,7 +139,8 @@
     <script src = "js/LeftPanerUI.js"></script>
     <!-- ChatLogUI class-->
     <script src = "js/ChatLogUI.js"></script>
-
+    <!-- Utility class-->
+    <script src = "js/Utility.js"></script>
 
     <!-- cs300-function script -->
     <script src = "js/cs300-function.js"></script>
