--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 <a href="demo5\Mainscreen_Workchat\index.html">Demo 5 (10 December 2015)</a><br>
 <a href="demo6\Mainscreen_Workchat\index.html">Demo 6 (12 December 2015)</a><br>
 <a href="demo7\Mainscreen_Workchat\index.html">Demo 7 (12 December 2015)</a><br>
+<a href="demo8\Mainscreen_Workchat\index.html">Demo 8 (12 December 2015)</a><br>
