fix firefox event

--- a/Mainscreen_Workchat/index.html
+++ b/Mainscreen_Workchat/index.html
@@ -112,7 +112,7 @@
                             <!-- insert textbox and send button here-->
                             <div class="container-fluid">
                             <div class="row">
-                            <textarea id="text-box" class="chat-widget-group col-lg-10 col-md-10 col-xs-10" cols="5" rows="1" onkeypress="enterKeyListener();"></textarea>
+                            <textarea id="text-box" class="chat-widget-group col-lg-10 col-md-10 col-xs-10" cols="5" rows="1" onKeyDown="enterKeyListener(event);"></textarea>
                             <input id="submitMessage" type="submit" class="chat-widget-group btn btn-info col-lg-2 col-md-2 col-xs-2" value="Send">
                             </div>
                             </div>
