Dialog with checkbox

--- a/Mainscreen_Workchat/index.html
+++ b/Mainscreen_Workchat/index.html
@@ -95,6 +95,13 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper col-lg-8 col-md-8 col-xs-8">
+            <!-- light box dialog -->
+             <div id="light" class="white_content">This is the lightbox content.
+                 <a href="#" id = 'close_dialog'>close</a>
+                 <div id = 'check-box-area'></div>
+             </div>
+            <div id="fade" class="black_overlay"></div>
+            <!-- -->
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-11 col-md-11 col-xs-11">
@@ -141,8 +148,11 @@
     <script src = "js/LeftPanerUI.js"></script>
     <!-- ChatLogUI class-->
     <script src = "js/ChatLogUI.js"></script>
+    <!-- DialogManager class -->
+     <script src = "js/DialogManager.js"></script>
     <!-- Utility class-->
     <script src = "js/Utility.js"></script>
+    
 
     <!-- cs300-function script -->
     <script src = "js/cs300-function.js"></script>
@@ -153,7 +163,7 @@
    
     <!-- test script -->
     <script src = "js/Test/testChatBubble.js"></script>
-    
+    <script src = "js/Test/testDialog.js"></script>
 
 </body>
 
